--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 			<tr>
 				<td width=400px>
 				  <center>
-					  <a href="./resources/images/hierarchy.png"><img class="rounded" src = "./resources/images/hierarchy.png" width="800px"></img></href></a><br>
+					  <a><img class="rounded" src = "./resources/images/hierarchy.png" width="800px"></img></a><br>
 				</center>
 				</td>
 			</tr>
@@ -276,23 +276,23 @@
 					We present several examples of fine-grained sub-action instances.
 					Each group belongs to three element categories within a same event (BB, FX, UB, and VT).
 					It can be seen such fine-grained instances contain subtle and challenging differences.
-					(hover on the GIF for a 0.25x slowdown)</span>
+					(Hover on the GIF for a 0.25x slowdown)</span>
 				<br>
 				</center>
 				<td width=360px>
 					<center>
 						<span style="font-size:22px"><a>Balance Beam (BB)</a></span><br>
-						<a><img onmouseover="this.src='./resources/examples/example_bb_01_slow.gif';" onmouseout="this.src='./resources/examples/example_bb_01_normal.gif';" src = "./resources/examples/example_bb_01_normal.gif" width = "100px"></a>
-						<a><img onmouseover="this.src='./resources/examples/example_bb_02_slow.gif';" onmouseout="this.src='./resources/examples/example_bb_02_normal.gif';" src = "./resources/examples/example_bb_02_normal.gif" width = "100px"></a>
-						<a><img onmouseover="this.src='./resources/examples/example_bb_03_slow.gif';" onmouseout="this.src='./resources/examples/example_bb_03_normal.gif';" src = "./resources/examples/example_bb_03_normal.gif" width = "100px"></a>
+						<a><img onmouseover="this.src='./resources/examples/example_bb_01_slow.gif';" onmouseout="this.src='./resources/examples/example_bb_01_normal.gif';" src = "./resources/examples/example_bb_01_normal.gif" width = "100px"></img></a>
+						<a><img onmouseover="this.src='./resources/examples/example_bb_02_slow.gif';" onmouseout="this.src='./resources/examples/example_bb_02_normal.gif';" src = "./resources/examples/example_bb_02_normal.gif" width = "100px"></img></a>
+						<a><img onmouseover="this.src='./resources/examples/example_bb_03_slow.gif';" onmouseout="this.src='./resources/examples/example_bb_03_normal.gif';" src = "./resources/examples/example_bb_03_normal.gif" width = "100px"></img></a>
 					</center>
 				</td>
 				<td width=360px>
 					<center>
 						<span style="font-size:22px"><a>Floor Exercise (FX)</a></span><br>
-						<a><img onmouseover="this.src='./resources/examples/example_fx_01_slow.gif';" onmouseout="this.src='./resources/examples/example_fx_01_normal.gif';" src = "./resources/examples/example_fx_01_normal.gif" width = "100px"></a>
-						<a><img onmouseover="this.src='./resources/examples/example_fx_02_slow.gif';" onmouseout="this.src='./resources/examples/example_fx_02_normal.gif';" src = "./resources/examples/example_fx_02_normal.gif" width = "100px"></a>
-						<a><img onmouseover="this.src='./resources/examples/example_fx_03_slow.gif';" onmouseout="this.src='./resources/examples/example_fx_03_normal.gif';" src = "./resources/examples/example_fx_03_normal.gif" width = "100px"></a>
+						<a><img onmouseover="this.src='./resources/examples/example_fx_01_slow.gif';" onmouseout="this.src='./resources/examples/example_fx_01_normal.gif';" src = "./resources/examples/example_fx_01_normal.gif" width = "100px"></img></a>
+						<a><img onmouseover="this.src='./resources/examples/example_fx_02_slow.gif';" onmouseout="this.src='./resources/examples/example_fx_02_normal.gif';" src = "./resources/examples/example_fx_02_normal.gif" width = "100px"></img></a>
+						<a><img onmouseover="this.src='./resources/examples/example_fx_03_slow.gif';" onmouseout="this.src='./resources/examples/example_fx_03_normal.gif';" src = "./resources/examples/example_fx_03_normal.gif" width = "100px"></img></a>
 					</center>
 				</td>
 			</tr>
@@ -300,17 +300,17 @@
 				<td width=360px>
 					<center>
 						<span style="font-size:22px"><a>Uneven Bar (UB)</a></span><br>
-						<a><img onmouseover="this.src='./resources/examples/example_ub_01_slow.gif';" onmouseout="this.src='./resources/examples/example_ub_01_normal.gif';" src = "./resources/examples/example_ub_01_normal.gif" width = "100px"></a>
-						<a><img onmouseover="this.src='./resources/examples/example_ub_02_slow.gif';" onmouseout="this.src='./resources/examples/example_ub_02_normal.gif';" src = "./resources/examples/example_ub_02_normal.gif" width = "100px"></a>
-						<a><img onmouseover="this.src='./resources/examples/example_ub_03_slow.gif';" onmouseout="this.src='./resources/examples/example_ub_03_normal.gif';" src = "./resources/examples/example_ub_03_normal.gif" width = "100px"></a>
+						<a><img onmouseover="this.src='./resources/examples/example_ub_01_slow.gif';" onmouseout="this.src='./resources/examples/example_ub_01_normal.gif';" src = "./resources/examples/example_ub_01_normal.gif" width = "100px"></img></a>
+						<a><img onmouseover="this.src='./resources/examples/example_ub_02_slow.gif';" onmouseout="this.src='./resources/examples/example_ub_02_normal.gif';" src = "./resources/examples/example_ub_02_normal.gif" width = "100px"></img></a>
+						<a><img onmouseover="this.src='./resources/examples/example_ub_03_slow.gif';" onmouseout="this.src='./resources/examples/example_ub_03_normal.gif';" src = "./resources/examples/example_ub_03_normal.gif" width = "100px"></img></a>
 					</center>
 				</td>
 				<td width=360px>
 					<center>
 						<span style="font-size:22px"><a>Vault (VT)</a></span><br>
-						<a><img onmouseover="this.src='./resources/examples/example_vt_01_slow.gif';" onmouseout="this.src='./resources/examples/example_vt_01_normal.gif';" src = "./resources/examples/example_vt_01_normal.gif" width = "100px"></a>
-						<a><img onmouseover="this.src='./resources/examples/example_vt_02_slow.gif';" onmouseout="this.src='./resources/examples/example_vt_02_normal.gif';" src = "./resources/examples/example_vt_02_normal.gif" width = "100px"></a>
-						<a><img onmouseover="this.src='./resources/examples/example_vt_03_slow.gif';" onmouseout="this.src='./resources/examples/example_vt_03_normal.gif';" src = "./resources/examples/example_vt_03_normal.gif" width = "100px"></a>
+						<a><img onmouseover="this.src='./resources/examples/example_vt_01_slow.gif';" onmouseout="this.src='./resources/examples/example_vt_01_normal.gif';" src = "./resources/examples/example_vt_01_normal.gif" width = "100px"></img></a>
+						<a><img onmouseover="this.src='./resources/examples/example_vt_02_slow.gif';" onmouseout="this.src='./resources/examples/example_vt_02_normal.gif';" src = "./resources/examples/example_vt_02_normal.gif" width = "100px"></img></a>
+						<a><img onmouseover="this.src='./resources/examples/example_vt_03_slow.gif';" onmouseout="this.src='./resources/examples/example_vt_03_normal.gif';" src = "./resources/examples/example_vt_03_normal.gif" width = "100px"></img></a>
 					</center>
 				</td>
 			</tr>
@@ -326,7 +326,7 @@
 			<tr>
 				  <td width=400px>
 				  <center>
-					  <a href="./resources/images/element_recognition.png"><img class="rounded" src = "./resources/images/element_recognition.png" width="720px"></img></href></a><br>
+					  <a><img class="rounded" src = "./resources/images/element_recognition.png" width="800px"></img></a><br>
 				</center>
 				</td>
 			</tr>
@@ -346,7 +346,7 @@
 			<tr>
 				  <td width=400px>
 				  <center>
-					  <a href="./resources/images/tsn_vs_nframe.png"><img class="rounded" src = "./resources/images/tsn_vs_nframe.png" width="320px"></img></href></a><br>
+					  <a><img class="rounded" src = "./resources/images/tsn_vs_nframe.png" width="320px"></img></a><br>
 				</center>
 				</td>
 			</tr>
@@ -370,7 +370,7 @@
 				<tr>
 					  <td width=400px>
 					  <center>
-						  <a href="./resources/images/temporal_importance.png"><img class="rounded" src = "./resources/images/temporal_importance.png" width="720px"></img></href></a><br>
+						  <a><img class="rounded" src = "./resources/images/temporal_importance.png" width="800px"></img></a><br>
 					</center>
 					</td>
 				</tr>
@@ -394,7 +394,7 @@
 				<tr>
 					<td width=400px>
 					<center>
-						<a href="./resources/images/pretrain.png"><img class="rounded" src = "./resources/images/pretrain.png" width="240px"></img></href></a><br>
+						<a><img class="rounded" src = "./resources/images/pretrain.png" width="240px"></img></a>
 					</center>
 					</td>
 				</tr>
@@ -406,7 +406,30 @@
 					</td>
 				</tr>
 				</table>
-		
+
+			<br>
+			
+			<table>
+				<center><h2> (4) Why pose information does not help? </h2></center>
+				Skeleton-based ST-GCN struggles due to the challenges in skeleton estimation on gymnastics instances.
+				<tr>
+					<td width=400px>
+					<center>
+						<a><img onmouseover="this.src='./resources/examples/pose_slow.gif';" onmouseout="this.src='./resources/examples/pose.gif';" src = "./resources/examples/pose.gif" width = "400px"></img></a>
+					</center>
+					</td>
+				</tr>
+				<tr>
+					<td align=center width=720px>
+					<span style="font-size:14px"><i>
+					The results of person detection and pose estimation using <a href='https://github.com/MVIG-SJTU/AlphaPose'>AlphaPose</href></a> for a Vault routine.
+					It can be seen that detections and pose estimations of the gymnast are missed in multiple frames, especially in frames with intense motion.
+					These frames are important for fine-grained recognition. (Hover on the GIF for a 0.25x slowdown) </i>
+					</span>
+					</td>
+				</tr>
+				</table>
+					
 		</table>
 	      <br><br>
 		  <hr>
@@ -500,6 +523,7 @@
 				We sincerely thank the outstanding annotation team for their excellent work.
 				This work is partially supported by SenseTime Collaborative Grant on Large-scale Multi-modality Analysis
 				and the General Research Funds (GRF) of Hong Kong (No. 14203518 and No. 14205719).
+				The template of this webpage is borrowed from <a href=https://richzhang.github.io/colorization/>Richard Zhang</href><a>.
 			</left>
 		</td>
 			 </tr>
