add contact info

--- a/index.html
+++ b/index.html
@@ -648,7 +648,9 @@ year={2020}
 		  </div>
   		  </table>
 
-
+			<br><br>
+			<hr>
+  
 		  	
   		  <table align=center width=720px>
   			  <tr>
@@ -663,6 +665,22 @@ year={2020}
 		</td>
 			 </tr>
 		</table>
+
+		<br><br>
+		<hr>
+
+		<table align=center width=720px>
+			<tr>
+				<td width=400px>
+				  <left>
+			<center><h1>Contact</h1></center>
+			For further questions and suggestions, please contact Dian Shao (<a href='mailto:sd017@ie.cuhk.edu.hk'>sd017@ie.cuhk.edu.hk</a>).
+			
+			
+		</left>
+	</td>
+		 </tr>
+	</table>
 
 		<br><br>
 
