minor revise FAQ-1

--- a/index.html
+++ b/index.html
@@ -491,7 +491,9 @@
 				<center><h2> FAQs </h2></center>
 				Q1: Is the event-/element-level instance in your dataset cut in integral seconds?<br>
 				A1: No. All levels of instances (actions and sub-actions) are annotated in <i>exact</i> timestamp (milliseconds) 
-				in a pursuit of frame-level preciseness. Please refer to the instructions below for details.
+				in a pursuit of frame-level preciseness.
+				The number in the identifier is derived from integral seconds due to conciseness.
+				Please refer to the instructions below for details.
 				<center><h2> How to read the temporal annotation files (JSON)? </h2></center> 
 				Below, we show an example entry from the above JSON annotation file:
 				<pre style='font-family: Courier; font-size:14px'>
