--- a/index.html
+++ b/index.html
@@ -486,7 +486,8 @@
 				</td>
 				<table>
 				<center><h2> Updates </h2></center>
-				[16/04/2020] We fix a small issue on the naming of the subaction identifier "A_{ZZZZ}_{WWWW}" to avoid ambiguity.<br>
+				[16/04/2020] We fix a small issue on the naming of the subaction identifier "A_{ZZZZ}_{WWWW}" to avoid ambiguity.
+				(Thanks <a href='https://kennymckormick.github.io/'>Haodong Duan</a> for pointing this out.)<br>
 				[16/04/2020] We include new subsections to track updates and address FAQs.<br>
 				<center><h2> FAQs </h2></center>
 				Q1: Is the event-/element-level instance in your dataset cut in integral seconds?<br>
